--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@iconify/tailwind": "^1.1.1",
     "@types/vue2-editor": "^2.6.5",
     "ant-design-vue": "^1.7.8",
+    "axios": "^1.7.2",
     "core-js": "^3.25.3",
     "nuxt": "^2.15.8",
+    "uuid": "^10.0.0",
     "vue": "^2.7.10",
     "vue-server-renderer": "^2.7.10",
     "vue-template-compiler": "^2.7.10",
@@ -25,6 +27,7 @@
   "devDependencies": {
     "@nuxt/types": "^2.18.1",
     "@nuxt/typescript-build": "^2.1.0",
+    "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.4"
