--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "types": ["@types/node", "@nuxt/types"],
     "target": "ES2018",
     "module": "ESNext",
     "moduleResolution": "Node",
@@ -16,8 +17,13 @@
       "@/*": ["./*"]
     },
     "typeRoots": ["./node_modules/@types", "./types"],
-    "types": []
+    "jsx": "preserve",
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "allowSyntheticDefaultImports": true
   },
   "exclude": ["node_modules", ".nuxt", "dist"],
-  "include": ["types"]
+  "include": ["types/**/*.d.ts", "**/*.ts", "**/*.vue"]
 }
