--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@iconify-json/mdi-light": "^1.1.10",
     "@iconify/json": "^2.2.225",
     "@iconify/tailwind": "^1.1.1",
+    "@nuxtjs/axios": "^5.13.6",
     "@types/vue2-editor": "^2.6.5",
     "ant-design-vue": "^1.7.8",
     "axios": "^1.7.2",
@@ -19,6 +20,7 @@
     "nuxt": "^2.15.8",
     "uuid": "^10.0.0",
     "vue": "^2.7.10",
+    "vue-fragment": "^1.6.0",
     "vue-server-renderer": "^2.7.10",
     "vue-template-compiler": "^2.7.10",
     "vue2-editor": "^2.10.3",
@@ -27,6 +29,7 @@
   "devDependencies": {
     "@nuxt/types": "^2.18.1",
     "@nuxt/typescript-build": "^2.1.0",
+    "@types/node": "^20.14.11",
     "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.39",
