--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "types": ["@types/node", "@nuxt/types"],
+    "types": ["@types/node", "@nuxt/types", "@nuxtjs/axios"],
     "target": "ES2018",
     "module": "ESNext",
     "moduleResolution": "Node",
