--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "nuxt": "^2.15.8",
     "uuid": "^10.0.0",
     "vue": "^2.7.10",
+    "vue-class-component": "^7.2.6",
     "vue-fragment": "^1.6.0",
     "vue-server-renderer": "^2.7.10",
     "vue-template-compiler": "^2.7.10",
